# opDev

./: OWNERS  README.md
by_operator/: CMakeLists.txt  README.md  build.sh  opSVE.txt  op_base.txt  op_baseA.txt  op_baseB.txt  op_baseCSR.txt  op_baseSVE.txt  op_dense2COO.txt  op_dense2CSR.txt  op_gather.txt  op_gatherCOO.txt  op_gatherCSR.txt  op_transpose.txt
by_operator/build_out/: Makefile  custom_opp_ubuntu_aarch64.run
by_operator/build_out/cpukernel/: Makefile
by_operator/build_out/framework/: Makefile
by_operator/build_out/makepkg/: install.sh  upgrade.sh
by_operator/build_out/op_proto/: Makefile
by_operator/build_out/op_tiling/: Makefile
by_operator/cmake/util/: parse_ini_to_json.py
by_operator/cpukernel/: CMakeLists.txt
by_operator/cpukernel/impl/: dense_to_coo_kernels.cc  dense_to_coo_kernels.h  dense_to_csr_kernels.cc  dense_to_csr_kernels.h  sparse_mat_mul_base_a_kernels.cc  sparse_mat_mul_base_a_kernels.h  sparse_mat_mul_base_b_kernels.cc  sparse_mat_mul_base_b_kernels.h  sparse_mat_mul_base_kernels.cc  sparse_mat_mul_base_kernels.h  sparse_mat_mul_gather_coo_kernels.cc  sparse_mat_mul_gather_coo_kernels.h  sparse_mat_mul_sve_kernels.cc  sparse_mat_mul_sve_kernels.h  sparse_mat_mul_t_base_csr_kernels.cc  sparse_mat_mul_t_base_csr_kernels.h  sparse_mat_mul_t_gather_csr_kernels.cc  sparse_mat_mul_t_gather_csr_kernels.h
by_operator/op_proto/: dense_to_coo.cc  dense_to_coo.h  dense_to_csr.cc  dense_to_csr.h  sparse_mat_mul_base.cc  sparse_mat_mul_base.h  sparse_mat_mul_base_a.cc  sparse_mat_mul_base_a.h  sparse_mat_mul_base_b.cc  sparse_mat_mul_base_b.h  sparse_mat_mul_gather_coo.cc  sparse_mat_mul_gather_coo.h  sparse_mat_mul_sve.cc  sparse_mat_mul_sve.h  sparse_mat_mul_t_base_csr.cc  sparse_mat_mul_t_base_csr.h  sparse_mat_mul_t_gather_csr.cc  sparse_mat_mul_t_gather_csr.h
by_optest/base_csr_test/: run_performance_test.py
by_optest/base_csr_test/scripts/: verify_result.py
by_optest/base_csr_test/src/: main.cpp
by_optest/base_test/inc/: op_runner.h
by_optest/base_test/scripts/: verify_result.py
by_optest/base_test/src/: main.cpp
by_optest/base_test_A/inc/: op_runner.h
by_optest/base_test_A/src/: main.cpp
by_optest/base_test_B/scripts/: verify_result.py
by_optest/base_test_B/src/: CMakeLists.txt  main.cpp
by_optest/base_test_SVE/src/: main.cpp
by_optest/dense2COO_test/scripts/: verify_result.py
by_optest/dense2COO_test/src/: main.cpp  op_runner.cpp
by_optest/dense2CSR_test/scripts/: verify_result.py
by_optest/dense2CSR_test/src/: main.cpp
by_optest/gather_coo_test/src/: main.cpp
cplusplus/level1_single_api/: README.md  README_CN.md
cplusplus/level1_single_api/12_adxl/: CMakeLists.txt  readme.md
docs/: MATCH.md
inference/: README.md
inference/dataflow/: README.md
inference/dataflow/py_dflow/: CMakeLists.txt  README.md  build.sh
inference/dataflow/py_dflow/cmake/: intf_pub_linux.cmake  python_depends.cmake  test_funcs.cmake
inference/dataflow/py_dflow/cmake/modules/: Findair.cmake  Finddflow.cmake  Findmetadef.cmake  Findparser.cmake  Findsecurec.cmake  Findslog.cmake  Findudf.cmake
inference/dataflow/py_dflow/python/: setup.py
inference/dataflow/py_dflow/python/dataflow/: dataflow.py
inference/dataflow/py_dflow/python/dataflow/plugin/torch/: torch_plugin.py
inference/dataflow/py_dflow/python/dataflow/tools/tpl/: tpl_cmake.py
inference/dataflow/py_dflow/wrapper/: CMakeLists.txt  data_wrapper.cpp  dflow_wrapper.cpp  utils.h
inference/dataflow/py_dflow/wrapper/flow_func_wrapper/: CMakeLists.txt  flow_func_wrapper.cpp
inference/dataflow/udf_workspace/02_udf_call_add_nn/: CMakeLists.txt
operator_contrib/: README.md
operator_contrib/AddCustomSample/: README.md
operator_contrib/AddCustomSample/KernelLaunch/AddCustomKernel/: CMakeLists.txt  README.md  add_custom.cpp  run.sh
operator_contrib/AddCustomSample/KernelLaunch/AddCustomKernel/examples/CPPInvocation/: CMakeLists.txt  README.md  data_utils.h  main.cpp  run.sh
operator_contrib/AddCustomSample/KernelLaunch/AddCustomTilingKernel/examples/CPPInvocation/: CMakeLists.txt  README.md  data_utils.h  main.cpp  run.sh
operator_contrib/AddCustomSample/KernelLaunch/AddCustomTilingKernel/examples/PythonInvocation/: CMakeLists.txt  README.md  pybind11.cpp  run.sh
operator_contrib/AddcdivCustomSample/: README.md
operator_contrib/AsStridedSample/: README.en.md  README.md
operator_contrib/AxpySample/: REAME.md
operator_contrib/CrossSample/: README.en.md
operator_contrib/CumsumSample/: README.en.md  README.md
operator_contrib/DawsnSample/: README.en.md  README.md
operator_contrib/DepthToSpaceSample/: README.en.md  README.md
operator_contrib/EyeSample/: README.en.md  README.md
operator_contrib/FlashAttentionScoreSample/: README.md
operator_contrib/GeluSample/: README.en.md  README.md
operator_contrib/GlobalAvgPoolSample/: README.en.md  README.md
operator_contrib/GreaterEqualSample/: README.md
operator_contrib/HighPerfMatMul/: README.md
operator_contrib/HistogramSample/: README.en.md  README.md
operator_contrib/InstanceNormSample/: README.en.md
operator_contrib/LayerNormCustomSample/: README.md
operator_contrib/LerpSample/: README.en.md  README.md
operator_contrib/LessEqualSample/: README.md
operator_contrib/LpNormV2CustomSample/: README.md
operator_contrib/MatmulLeakyReluCustom/: README.md  matmul_leakyrelu_custom.json
operator_contrib/MseLossSample/: README.en.md
operator_contrib/OnesSample/: README.md
operator_contrib/PreLayerNormCustomSample/: README.md
operator_contrib/QuantMatmulCustomSample/: README.en.md
operator_contrib/ReduceSumSample/: README.en.md  README.md
operator_contrib/ScatterSubSample/: README.md
operator_contrib/SpenceSample/: README.en.md
operator_contrib/ThreeNNSample/: README.en.md  README.md
operator_contrib/TrilSample/: README.en.md  README.md
operator_contrib/TriuSample/: README.en.md  README.md
operator_contrib/UnalignAddCustomSample/: README.en.md  README.md
operator_contrib/XlogySample/: README.en.md  README.md
python/level1_single_api/: README.md  README_CN.md
(+549 files in other folders)
